k8s-third-project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-api-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /signup
            pathType: Prefix
            backend:
              service:
                name: user-api-service
                port:
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: user-api-service
                port:
                  number: 80
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: task-api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
